--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
-<!DOCTYPE html><html><head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Camilo Test Page</title>
-
-    <script src="p5.min.js"></script>
-    <script src="p5.dom.min.js"></script>
-    <script src="libraries/p5.speech.js"></script>
-    <script src="sketch.js"></script>
-
+  <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
+  <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
+  <script language="javascript" type="text/javascript" src="libraries/p5.ble.js"></script>
+  <script language="javascript" type="text/javascript" src="bluetooth.js"></script>
+  <script language="javascript" type="text/javascript" src="commands.js"></script>
+  <script language="javascript" type="text/javascript" src="drawScreen.js"></script>
+  <script language="javascript" type="text/javascript" src="BluetoothGUI.js"></script>
+  <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
+  <script src="p5.ble.min.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
+  <!-- This line removes any default padding and style.
+       You might only need one of these values set. -->
+  <style> body { padding: 0; margin: 0; } </style>
 </head>
 
 <body>
-</body></html>
+</body>
+</html>
