--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/addons/p5.sound.min.js"></script>
     <script src="https://unpkg.com/p5ble@0.0.4/dist/p5.ble.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
+    <script src="libraries/p5.speech.js"></script>
     <script src="MainGUI.js"></script>
     <script src="Bluetooth.js"></script>
     <script src="Commands.js"></script>
