--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/addons/p5.sound.min.js"></script>
     <script src="https://unpkg.com/p5ble@0.0.4/dist/p5.ble.js" type="text/javascript"></script>
@@ -6,13 +8,12 @@
     <script src="libraries/p5.speech.js"></script>
     <script src="MainGUI.js"></script>
     <script src="Bluetooth.js"></script>
-    <script src="Commands.js"></script>
-    <script src="DrawScreen.js"></script>
+    <script src="Speech.js"></script>
+    <script src="Screen.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
 
   </head>
   <body>
-  
-
-</body></html>
+  </body>
+</html>
